5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1573_1334.log
== TEST (2019-03-13 13:54:20) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 24 % 3)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:54:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 24 % 3)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.146403
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8
Resto:  0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:55:10) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 24 % 3)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.14364
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8
Resto:  0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:56:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 24 // 3)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.219351
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:57:01) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 748 % 10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.160536
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:57:14) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 748 // 10)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8
Resto:  74
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:57:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 748 // 10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.200528
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8
Resto:  74
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:57:29) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 748 / 10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.27699
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  74.8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:58:01) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 748 / 10)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  74.8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:58:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 748 / 10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.235108
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  74.8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:58:50) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 748 / 10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.124867
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  74.8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:58:54) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 748 / 10)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  74.8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:03:09) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 24 / 3)

print("Resto: ", 748 / 10)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  74.8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:03:41) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 24 / 3)

print("Resto: ", 748 / 10)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  74.8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:03:45) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 24 / 3)

print("Resto: ", 748 / 10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.157398
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  74.8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:05:15) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ",  10-2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 24 // 3)

print("Resto: ", 748 // 10)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8
Resto:  74
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:05:18) 
-- CODE:
print("Adicao: ", 5+3)

print("Subtracao: ",  10-2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 24 // 3)

print("Resto: ", 748 // 10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.210965
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8
Resto:  74
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:05:59) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ",  (10 - 2)

print("Multiplicacao: ", (4 * 4)

print("Divisao: ", (24 // 3)

print("Resto: ", (748 // 10)

print("Potenciacao: ", (2**3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ",  (10 - 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:06:18) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ", (10 - 2)

print("Multiplicacao: ", (4 * 4)

print("Divisao: ", (24 // 3)

print("Resto: ", (748 // 10)

print("Potenciacao: ", (2**3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", (10 - 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:06:36) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ", (10 ´ 2)

print("Multiplicacao: ", (4 * 4)

print("Divisao: ", (24 // 3)

print("Resto: ", (748 // 10)

print("Potenciacao: ", (2**3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ", (10 ´ 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:06:56) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ",  (10 - 2)

print("Multiplicacao: ", (4 * 4)

print("Divisao: ", (24 // 3)

print("Resto: ", (748 // 10)

print("Potenciacao: ", (2**3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ",  (10 - 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:07:06) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ",  (10 - 2)

print("Multiplicacao: ", (4 * 4)

print("Divisao: ", (24 // 3)

print("Resto: ", (748 // 10)

print("Potenciacao: ", (2**3)
-- EXECUTION TIME:
0.146572
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 3
    print("Subtracao: ",  (10 - 2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:07:09) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ",  (10 - 2)

print("Multiplicacao: ", (4 * 4)

print("Divisao: ", (24 // 3)

print("Resto: ", (748 // 10)

print("Potenciacao: ", (2**3)
-- EXECUTION TIME:
0.152956
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 3
    print("Subtracao: ",  (10 - 2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:07:12) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ",  (10 - 2)

print("Multiplicacao: ", (4 * 4)

print("Divisao: ", (24 // 3)

print("Resto: ", (748 // 10)

print("Potenciacao: ", (2**3)
-- EXECUTION TIME:
0.120677
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 3
    print("Subtracao: ",  (10 - 2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:07:47) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ",  10 - 2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 24 // 3)

print("Resto: ", 748 % 10)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ",  10 - 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:07:52) 
-- CODE:
print("Adicao: ", (5 + 3)

print("Subtracao: ",  10 - 2)

print("Multiplicacao: ", 4 * 4)

print("Divisao: ", 24 // 3)

print("Resto: ", 748 % 10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.122495
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 3
    print("Subtracao: ",  10 - 2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:08:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",  10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 24 // 3)

print("Resto: ", 748 % 10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.145602
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:08:10) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",  10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 24 // 3)

print("Resto: ", 748 % 10)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:08:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",  10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 24 / 3)

print("Resto: ", 748 % 10)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:08:22) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",  10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 24 / 3)

print("Resto: ", 748 % 10)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.148217
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
